# SQL-DAG-Flow

./: .gitignore  LICENSE  MANIFEST.in  README.md  SQL_DAG_Flow.spec  build_exe.py  package-lock.json  package.json  pyproject.toml  start_app.ps1
backend/: graph_output.json  main.py  parser.py  requirements.txt  test_parser.py
build_exe/SQL_DAG_Flow/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-SQL_DAG_Flow.txt  xref-SQL_DAG_Flow.html
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: AnnotationNode.jsx  App.jsx  CustomNode.jsx  DetailsPanel.jsx  FileCreationModal.jsx  FolderSelectorModal.jsx  SelectionToolbar.jsx  Sidebar.jsx  api.js  index.css
frontend/src/algorithms/: elk.js
sql_examples/: bronze_users.sql  gold_user_stats.sql  silver_users_cleaned.sql  test_discovery.sql
sql_examples/complex_ecommerce/bronze/: orders_raw.sql  web_logs.sql
sql_examples/complex_ecommerce/bronze/other/: users_raw.sql
sql_examples/complex_ecommerce/gold/: daily_revenue.sql  product_performance.sql  user_conversion_funnel.sql
sql_examples/complex_ecommerce/silver/: orders_cleaned.sql  sessions.sql  users_enriched.sql
sql_examples/discovery_examples/: finance_revenue.sql  logistics_delays.sql  marketing_performance.sql
src/sql_dag_flow/: main.py  parser.py  test_api_endpoints.py  verify_counts.py
src/sql_dag_flow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/sql_dag_flow/static/: index.html
src/sql_dag_flow/static/assets/: index-4Ug7_waH.js  index-BvR3xTHQ.js  index-CGTVTCk8.js  index-DTYdHiSH.js  index-DoR4cKrG.js  index-DzAemHSo.js  index-h7gxR8yA.css
