[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-dag-flow"
version = "0.1.0"
description = "A sophisticated SQL lineage visualization tool for Medallion Architectures."
readme = "README.md"
authors = [
    {name = "Flavio Sandoval", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlglot",
    "networkx",
    "pydantic"
]

[project.scripts]
sql-dag-flow = "sql_dag_flow.main:start"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sql_dag_flow*"]

[tool.setuptools.package-data]
sql_dag_flow = ["static/**/*"]
