[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-dag-flow"
version = "0.1.9"
description = "A sophisticated SQL lineage visualization tool for Medallion Architectures."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Flavio Sandoval", email = "dsandovalflavio@gmail.com"}
]
keywords = ["sql", "lineage", "dag", "visualization", "medallion-architecture", "data-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlglot",
    "networkx",
    "pydantic"
]

[project.scripts]
sql-dag-flow = "sql_dag_flow.main:start"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sql_dag_flow*"]

[tool.setuptools.package-data]
sql_dag_flow = ["static/**/*"]